--- a/pacerechner/index.html
+++ b/pacerechner/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <script src="js.js"></script>
     <meta charset="UTF-8">
@@ -7,17 +8,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: aqua;"  >
-   <div style="text-align: center;">
 
-    <label style="font-size: 2cm;">Pace-rechner</label><br>
-    </div> 
+<body style="background-color: aqua;">
     <div style="text-align: center;">
-    <input type="text"  class="Zeit" id="myText1">Welche Distanz möchten sie laufen?(km)<br>
-    <input type="text"  class="Strecke" id="myText2">In welcher Zeit möchten sie dies laufen?<br>
-    <button type="button" class="Berechne" id="myButton">Pace ausrechnen</button>
+
+        <label style="font-size: 2cm;">Pace-rechner</label><br>
     </div>
-    
+    <div style="text-align: center;">
+        <input type="text" class="Zeit" id="myText1">Welche Distanz möchten sie laufen?(km)<br>
+        <input type="text" class="Strecke" id="myText2">In welcher Zeit möchten sie dies laufen?<br>
+        <button type="button" class="Berechne" id="myButton">Pace ausrechnen</button>
+    </div>
+
+    <div style="text-align: center;" id="ergebnis">
+    </div>
+
     </script>
 </body>
+
 </html>
