--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 
 <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub .</p>
+    <a href="a/">Zum Pacerechner</a>
 </body>
 
 </html>
