--- a/a/index.html
+++ b/a/index.html
@@ -15,8 +15,8 @@
         <label style="font-size: 1.99cm;">Pace-rechner</label><br>
     </div>
     <div style="text-align: center;">
-        <input type="text" class="Strecke" id="myText2">In welcher Zeit möchten sie dies laufen?<br>
-        <input type="text" class="Zeit" id="myText1">Welche Distanz möchten sie laufen?(km)<br>      
+        <input type="text" class="Zeit" id="myText2">In welcher Zeit möchten sie dies laufen?<br>
+        <input type="text" class="Strecke" id="myText1">Welche Distanz möchten sie laufen?(km)<br>      
         <button type="button" class="Berechne" id="myButton">Pace ausrechnen</button>
     </div>
 
