--- a/einkaufen/index.html
+++ b/einkaufen/index.html
@@ -37,7 +37,7 @@
     <h2 style="color: crimson;">Einkaufsliste:</h2>
 
     
-    <div style="font-size: 1cm;">
+    <div style="font-size: 0. 7cm;">
 
     <div  class="bn"></div>
     <br>
