--- a/a/index.html
+++ b/a/index.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <script src="js.js"></script>
+    <link rel="stylesheet" href="i.css">
+    <script src="index.js"></script>
+    <h1>Shopping List </h1>
+    <h2>Bitte Einkaufen:</h2>
+    <br>
+    <br>
+    <br>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
-<body style="background-color: aqua;">
-    <div style="text-align: center;">
-
-        <label style="font-size: 1.99cm;">Pace-rechner</label><br>
-    </div>
-    <div style="text-align: center;">
-        <input type="text" class="Zeit" id="myText2">In welcher Zeit möchten sie dies laufen?<br>
-        <input type="text" class="Strecke" id="myText1">Welche Distanz möchten sie laufen?(km)<br>      
-        <button type="button" class="Berechne" id="myButton">Pace ausrechnen</button>
-    </div>
-
-    <div style="text-align: center;" id="ergebnis">
-    </div>
-
-    </script>
+<body>
 </body>
 
+
+</div>
+<div class="grid">
+
+    <button style="width: 4cm; height: 1cm;" type="button"  class="erdbeeren">erbeeren</button>
+
+  
+    <input style="width: 1cm; height: 1cm;" type="text"  class="erbeeren1">
+
+
+
+    <div class="a"></div>
+ 
+
+
+</div>
 </html>
