--- a/a/index.html
+++ b/a/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="i.css">
-    <script src="index.js"></script>
-    <h1>Shopping List </h1>
+    <script src="i.js"></script>
+
     <h2>Bitte Einkaufen:</h2>
     <br>
     <br>
@@ -24,7 +24,6 @@
 
   
     <input style="width: 1cm; height: 1cm;" type="text"  class="erbeeren1">
-
 
 
     <div class="a"></div>
